--- a/package.json
+++ b/package.json
@@ -10,5 +10,13 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "fs-extra": "^0.22.1",
+    "html2jade": "^0.8.4",
+    "readdirp": "^1.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.0.0"
+  }
 }
