--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "htmlalljade",
   "version": "1.0.0",
-  "description": "",
+  "description": "Bath convert HTML to Jade conversion tool, base html2jade",
   "main": "index.js",
   "bin": {
     "htmlalljade": "./bin/htmlalljade"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node_modules/.bin/mocha test"
+  },
+  "engines": {
+    "node": ">= 0.10.x"
   },
   "author": "",
-  "license": "ISC",
+  "license": "BSE",
   "dependencies": {
     "fs-extra": "^0.22.1",
     "html2jade": "^0.8.4",
     "readdirp": "^1.3.0"
   },
   "devDependencies": {
-    "chai": "^3.0.0"
+    "chai": "^3.0.0",
+    "mocha": "^2.2.5"
   }
 }
